src/main/resources/static/style/style.css
@font-face {
    font-family: JBML;
    src: url("../fonts/JBML.woff2");
}

@font-face {
    font-family: JBML;
    src: url("../fonts/JBMLEX.woff2");
}

body {
    font-family: JBML, serif
}

.tooltip {
    display:inline-block;
    position:relative;
    text-align:left;
}

.tooltip .bottom {
    top:40px;
    left:50%;
    transform:translate(-50%, 0);
    padding:10px 20px;
    color:#FFFFFF;
    background-color:#222831;
    font-weight:normal;
    font-size:13px;
    border-radius:8px;
    position:absolute;
    z-index:99999999;
    box-sizing:border-box;
    box-shadow:0 1px 8px rgba(0,0,0,0.5);
    visibility:hidden; opacity:0; transition:opacity 0.8s;
}

.tooltip:hover .bottom {
    visibility:visible; opacity:1;
}

.tooltip .bottom i {
    position:absolute;
    bottom:100%;
    left:50%;
    margin-left:-12px;
    width:24px;
    height:12px;
    overflow:hidden;
}

.tooltip .bottom i::after {
    content:'';
    position:absolute;
    width:12px;
    height:12px;
    left:50%;
    transform:translate(-50%,50%) rotate(45deg);
    background-color:#222831;
    box-shadow:0 1px 8px rgba(0,0,0,0.5);
}

input:focus::placeholder {
    color: transparent;
}

textarea:focus::placeholder {
    color: transparent;
}

